--- a/css/style.css
+++ b/css/style.css
@@ -1602,6 +1602,11 @@ ul.contact-info-page li:first-child {
 	background-repeat: no-repeat;
 	background-color: #F8AC0C;
 }
+
+.contact-phone, .contact-mail {
+	padding-top: 20px !important;
+}
+
 .contact-phone:before, .contact-phone:after{
 	content:'';
 	position:absolute;
@@ -1663,6 +1668,10 @@ ul.contact-list li{
 
 .contact-loc:after{
 	height: 80px;
+}
+
+.contact-phone:after {
+    height: 65px;
 }
 
 
