--- a/css/style.css
+++ b/css/style.css
@@ -326,8 +326,9 @@ nav#main-nav select {
 	display: block;
 	font-size: 18px;
 	font-weight: bold;
-	/* text-shadow: 1px 1px 2px rgba(248, 172, 12, 1); */
-	text-shadow: 1px 1px 2px rgba(255, 255, 255, 1);
+	/* text-shadow: 1px 1px 2px rgba(248, 172, 12, 1);
+	text-shadow: 1px 1px 2px rgba(255, 255, 255, 1); */
+	text-shadow: 0px 1px 8px rgba(255, 255, 255, 1);
 	position: relative;
 	text-decoration: none;
 	transition: all 0.3s;
