update css grey-bg jadi putih

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
     background: none repeat scroll 0 0 #FFFFFF;
 }
 .grey-bg {
-	/* background-color:#efefef; */
+	background-color:#fff;
 }
 .dark-grey-bg {
 	background-color:#565a60;
