update menu mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3985,8 +3985,8 @@ a:hover {
 			cursor:pointer;
 			padding:10px;
 			border:none;
-			color:#777;
-			font-family: 'OswaldLight', Arial, Helvetica, sans-serif;
+			color:#132060;
+			/* font-family: 'OswaldLight', Arial, Helvetica, sans-serif; */
 		}
 }
 
