--- a/css/style.css
+++ b/css/style.css
@@ -4035,6 +4035,10 @@ a:hover {
     color: #132060;
     /* font-family: 'OswaldLight', Arial, Helvetica, sans-serif; */
   }
+
+  nav#main-nav select option {
+	background-color: #fff !important;
+  }
 }
 
 /* #Tablet (Portrait) (2)
