--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,6 @@ body {
 
 /* HEADER
 ================================================== */
-#header {
-}
 .header-logo-container {
   float: left;
   /* background-color: #fff; */
@@ -266,9 +264,9 @@ ul.social-links li {
   height: 38px;
   margin-left: 15px;
 }
-.header-container {
-  /* background-color: #fff;	 */
-}
+/* .header-container {
+  background-color: #fff;	
+} */
 
 /* LOGO
 ================================================== */
@@ -367,7 +365,7 @@ nav#main-nav select {
   padding-left: 17px;
   font-family: "OswaldLight", Arial, Helvetica, sans-serif;
 }
-#main-nav ul.sf-menu li ul {
+/* #main-nav ul.sf-menu li ul { */
   /*border-right: 1px solid #fff;
 border-bottom: 1px solid #fff;*/
   /*box-shadow: 0px 2px 0px 5px rgba(0,0,0, 0.3);*/
@@ -375,7 +373,7 @@ border-bottom: 1px solid #fff;*/
 border-left:3px solid #132060;
 border-bottom:3px solid #132060;
 box-sizing: border-box !important;*/
-}
+/* } */
 
 .profil p {
   font-size: 16px;
@@ -1139,8 +1137,8 @@ textarea {
 .content-container-white {
   background-color: #fff;
 }
-content-container-grey {
-}
+/* content-container-grey {
+} */
 .content-container-white-no-shadow {
   background-color: #fff;
 }
@@ -4036,6 +4034,7 @@ a:hover {
     padding: 10px;
     border: none;
     color: #132060;
+    background-color: #fff !important;
     /* font-family: 'OswaldLight', Arial, Helvetica, sans-serif; */
   }
 
@@ -4184,6 +4183,7 @@ a:hover {
 @media only screen and (max-width: 767px) {
   nav#main-nav select {
     width: 300px;
+    background-color: #fff !important;
   }
   .header-rl-container {
     width: 300px;
@@ -4409,6 +4409,7 @@ a:hover {
   nav#main-nav select {
     width: 420px;
     display: block;
+    background-color: #fff !important;
   }
   .header-rl-container {
     width: 420px;
