perbaikan mobile layout rekanan

--- a/component/rekanan.html
+++ b/component/rekanan.html
@@ -1,4 +1,4 @@
-<div class="container clearfix">
+<div class="container clearfix rekanan">
   <div class="sixteen columns m-bot-20">
     <ul class="our-clients-container clearfix">
       <li>
