update link IG di footer

--- a/component/footer.html
+++ b/component/footer.html
@@ -13,7 +13,7 @@
                 class="ig-link"
                 target="_blank"
                 title="Instagram"
-                href="http://instagram.com"
+                href="http://instagram.com/sentosaanara"
               ></a>
             </li>
 
