update email dan css icon nya

--- a/component/footer.html
+++ b/component/footer.html
@@ -62,7 +62,12 @@
           </li>
           <li class="footer-mail">
             <a href="mailto:sentosaanaranusantaracv@gmail.com"
-              >SentosaAnaraNusantaraCV@gmail.com</a
+              >sentosaanaranusantaracv@gmail.com</a
+            >
+          </li>
+          <li class="footer-mail2">
+            <a href="mailto:info@sentosaanaranusantara.co.id"
+              >info@sentosaanaranusantara.co.id</a
             >
           </li>
         </ul>
