--- a/css/style.css
+++ b/css/style.css
@@ -1682,7 +1682,7 @@ ul.contact-info-page li:first-child {
   top: 0px;
   left: -56px;
   width: 56px;
-  height: 56px;
+  height: 65px;
   background-image: url(../images/icon_footer_mail-black.png);
   background-position: center center;
   background-repeat: no-repeat;
@@ -3028,6 +3028,23 @@ ul.footer-contact-info li {
   background-repeat: no-repeat;
   background-color: #282828;
 }
+
+.footer-mail2:before,
+.footer-mail2:after {
+  content: "";
+  position: absolute;
+}
+.footer-mail2:after {
+  top: 0px;
+  left: -56px;
+  width: 56px;
+  height: 56px;
+  background-image: url(../images/icon_footer_mail.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-color: #565a60
+}
+
 .latest-post h4 {
   line-height: 18px;
   padding: 0;
