update sync server ke local

--- a/component/download-produk.html
+++ b/component/download-produk.html
@@ -17,7 +17,7 @@
           <a
             class=""
             target="_blank"
-            href="https://drive.google.com/file/d/1Zhv9NGY1k0yV_nrm1NuIKAHxbpwjmZKa/view?usp=sharing"
+            href="./arsip/Brosur Produk CV SAN.pdf"
             >Download</a
           >
         </div>
