--- a/component/download-profil.html
+++ b/component/download-profil.html
@@ -17,7 +17,7 @@
           <a
             class=""
             target="_blank"
-            href="https://drive.google.com/file/d/1ZhXLAx69FtEVet1-MuYeUwtT71x3_1Zh/view?usp=drive_link"
+            href="./arsip/COMPRO CV SAN.pdf"
             >Download</a
           >
         </div>
